force-app/main/default/objects/WorkOrder/fields/FSM_AssignedResExtID__c.field-meta.xml
<CustomField>
    <fullName>FSM_AssignedResExtID__c</fullName>
    <description>SFI-2897</description>
    <label>Assigned Resource Ext id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>