force-app/main/default/objects/WorkOrder/fields/FSM_Bundle__c.field-meta.xml
<CustomField>
    <fullName>FSM_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as a part of SFI-694</description>
    <label>Bundle</label>
    <type>Checkbox</type>
</CustomField>