force-app/main/default/objects/WorkOrder/fields/FSM_CapacityTaskType__c.field-meta.xml
<CustomField>
    <fullName>FSM_CapacityTaskType__c</fullName>
    <label>Capacity Task Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>