force-app/main/default/objects/WorkOrder/fields/FSM_ConnectionPlannedDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConnectionPlannedDate__c</fullName>
    <label>Connection Planned Date</label>
    <type>DateTime</type>
</CustomField>