force-app/main/default/objects/WorkOrder/fields/FSM_ContactID__c.field-meta.xml
<CustomField>
    <fullName>FSM_ContactID__c</fullName>
    <label>Contact ID</label>
    <length>174</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>