force-app/main/default/objects/WorkOrder/fields/FSM_CoreTMAJob__c.field-meta.xml
<CustomField>
    <fullName>FSM_CoreTMAJob__c</fullName>
    <description>SFS-6658</description>
    <formula>AND(
  NOT(ISBLANK(FSM_TMAPermit__c)),
  OR(
    NOT(ISBLANK(TEXT(FSM_NoticeState__c))),  
    ISPICKVAL(FSM_Suitability__c, &quot;E&quot;)      
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core TMA Job</label>
    <type>Checkbox</type>
</CustomField>