force-app/main/default/objects/WorkOrder/fields/FSM_CountMandatoryNotCompletedWOLIsSche__c.field-meta.xml
<CustomField>
    <fullName>FSM_CountMandatoryNotCompletedWOLIsSche__c</fullName>
    <description>SFS-62 Mandatory for Schedule Count</description>
    <label>Count Mandatory Not Completed WOLIs Sche</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>New, In Progress, On Hold</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.FSM_MandatoryforScheduling__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>