force-app/main/default/objects/WorkOrder/fields/FSM_CurrentDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_CurrentDateAndTime__c</fullName>
    <description>SFI-638</description>
    <formula>TEXT(NOW())</formula>
    <label>Current Date and Time</label>
    <type>Text</type>
</CustomField>