force-app/main/default/objects/WorkOrder/fields/FSM_DateTime_when_the_permit_triggered__c.field-meta.xml
<CustomField>
    <fullName>FSM_DateTime_when_the_permit_triggered__c</fullName>
    <description>SFS-2980</description>
    <formula>FSM_TMAPermit__r.FSM_NoticeDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Date/Time when permit triggered</label>
    <type>Date</type>
</CustomField>