force-app/main/default/objects/WorkOrder/fields/FSM_DMADA__c.field-meta.xml
<CustomField>
    <fullName>FSM_DMADA__c</fullName>
    <description>Created as part of SFI-282</description>
    <label>DMA / DAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>