force-app/main/default/objects/WorkOrder/fields/FSM_Easting__c.field-meta.xml
<CustomField>
    <fullName>FSM_Easting__c</fullName>
    <description>Updated as part of SFI-1635</description>
    <label>Grid (X)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>