force-app/main/default/objects/WorkOrder/fields/FSM_EastingText__c.field-meta.xml
<CustomField>
    <fullName>FSM_EastingText__c</fullName>
    <description>created for SFS-8362 bug, this is used for deep linking</description>
    <formula>SUBSTITUTE( TEXT(FSM_Easting__c) , &quot;,&quot;, &quot;&quot;)</formula>
    <label>Grid (X)</label>
    <type>Text</type>
</CustomField>