force-app/main/default/objects/WorkOrder/fields/FSM_FileName__c.field-meta.xml
<CustomField>
    <fullName>FSM_FileName__c</fullName>
    <description>Created as part of sfs-4083</description>
    <label>FSM_FileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>