force-app/main/default/objects/WorkOrder/fields/FSM_Floc__c.field-meta.xml
<CustomField>
    <fullName>FSM_Floc__c</fullName>
    <label>Floc</label>
    <length>64</length>
    <type>Text</type>
</CustomField>