force-app/main/default/objects/WorkOrder/fields/FSM_FlocDescription__c.field-meta.xml
<CustomField>
    <fullName>FSM_FlocDescription__c</fullName>
    <description>Functional location description</description>
    <label>Floc Description</label>
    <type>TextArea</type>
</CustomField>