force-app/main/default/objects/WorkOrder/fields/FSM_GeneratePDF__c.field-meta.xml
<CustomField>
    <fullName>FSM_GeneratePDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of sfs-4083</description>
    <label>FSM_GeneratePDF</label>
    <type>Checkbox</type>
</CustomField>