force-app/main/default/objects/WorkOrder/fields/FSM_GISResponse__c.field-meta.xml
<CustomField>
    <fullName>FSM_GISResponse__c</fullName>
    <description>SFI-638</description>
    <label>GIS Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>