force-app/main/default/objects/WorkOrder/fields/FSM_InspectionPassedDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_InspectionPassedDate__c</fullName>
    <label>Inspection Passed Date</label>
    <type>DateTime</type>
</CustomField>