force-app/main/default/objects/WorkOrder/fields/FSM_isRefreshed__c.field-meta.xml
<CustomField>
    <fullName>FSM_isRefreshed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-4132</description>
    <label>Is Refreshed</label>
    <type>Checkbox</type>
</CustomField>