force-app/main/default/objects/WorkOrder/fields/FSM_IsTemporaryRecord__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsTemporaryRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFI-1786</description>
    <label>Is Temporary Record?</label>
    <type>Checkbox</type>
</CustomField>