force-app/main/default/objects/WorkOrder/fields/FSM_IsWorkmateUser__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsWorkmateUser__c</fullName>
    <description>SFS-7754. Created because the permission set is not accessible in the flow to capture measuring points from a work order.</description>
    <formula>$Permission.FSM_Workmate_User</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Workmate User?</label>
    <type>Checkbox</type>
</CustomField>