force-app/main/default/objects/WorkOrder/fields/FSM_JobAge__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobAge__c</fullName>
    <formula>IF(OR(ISPICKVAL(FSM_BusinessUnit__c, &apos;Waste Non Infra&apos;),
ISPICKVAL(FSM_BusinessUnit__c, &apos;Water Non Infra&apos;)) ,
IF(ISPICKVAL(Status, &apos;Completed&apos;), 
         DATEVALUE(FSM_JobCompletionDate__c) - DATEVALUE(StartDate), 
         TODAY() - DATEVALUE(StartDate)) ,

IF(OR(ISPICKVAL(FSM_BusinessUnit__c, &apos;Waste Infra&apos;), 
ISPICKVAL(FSM_BusinessUnit__c, &apos;Metering&apos;), 
ISPICKVAL(FSM_BusinessUnit__c, &apos;Water Infra&apos;)) , 
IF(ISPICKVAL(Status, &apos;Completed&apos;), 
         DATEVALUE(FSM_JobCompletionDate__c) - DATEVALUE(FSM_JobCreatedDate__c),
         TODAY() - DATEVALUE(FSM_JobCreatedDate__c)) ,

IF(ISPICKVAL(FSM_BusinessUnit__c, &apos;Developer Services&apos;) ,
IF(ISPICKVAL(Status, &apos;Completed&apos;), 
         FSM_InspectionPassedDate__c - FSM_ConnectionPlannedDate__c  ,
         TODAY() - DATEVALUE(FSM_ConnectionPlannedDate__c)) , 0                        

                        )

                    )

            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>