force-app/main/default/objects/WorkOrder/fields/FSM_JobCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobCompletionDate__c</fullName>
    <label>Job Completion Date</label>
    <type>DateTime</type>
</CustomField>