force-app/main/default/objects/WorkOrder/fields/FSM_JobCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobCreatedDate__c</fullName>
    <label>Job Created Date</label>
    <type>DateTime</type>
</CustomField>