force-app/main/default/objects/WorkOrder/fields/FSM_JobSLA__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobSLA__c</fullName>
    <description>Created as a part of SFS-3043</description>
    <label>Job SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>