force-app/main/default/objects/WorkOrder/fields/FSM_JobSLAInHours__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobSLAInHours__c</fullName>
    <description>Created as a part of SFS-4427</description>
    <formula>IF(FSM_JobSLAUnitOfMeasure__c = &apos;Minutes&apos; , (FSM_JobSLA__c / 60) ,
IF(FSM_JobSLAUnitOfMeasure__c = &apos;Hours&apos;, FSM_JobSLA__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job SLA In Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>