force-app/main/default/objects/WorkOrder/fields/FSM_JobSLAUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobSLAUnitOfMeasure__c</fullName>
    <description>Created as a part of SFS-4427</description>
    <label>SLA Unit Of Measure</label>
    <length>80</length>
    <type>Text</type>
</CustomField>