force-app/main/default/objects/WorkOrder/fields/FSM_Latitude__c.field-meta.xml
<CustomField>
    <fullName>FSM_Latitude__c</fullName>
    <description>Created for SFS-244</description>
    <formula>Latitude</formula>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>