force-app/main/default/objects/WorkOrder/fields/FSM_Longitude__c.field-meta.xml
<CustomField>
    <fullName>FSM_Longitude__c</fullName>
    <description>Created For SFS-244</description>
    <formula>Longitude</formula>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>