force-app/main/default/objects/WorkOrder/fields/FSM_ManufacturersSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_ManufacturersSerialNumber__c</fullName>
    <label>Manufacturers Serial Number</label>
    <length>174</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>