force-app/main/default/objects/WorkOrder/fields/FSM_MeasuringPointCount__c.field-meta.xml
<CustomField>
    <fullName>FSM_MeasuringPointCount__c</fullName>
    <description>This field shows the count of measuring points for the WO
Updated as a part of SFS-5426</description>
    <label>Measuring Point Count</label>
    <summaryForeignKey>FSM_WOMeasuringPoint__c.FSM_WorkOrder__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>