force-app/main/default/objects/WorkOrder/fields/FSM_NorthingText__c.field-meta.xml
<CustomField>
    <fullName>FSM_NorthingText__c</fullName>
    <description>created for SFS-8362 bug, this is used for GIST deep linking</description>
    <formula>SUBSTITUTE( TEXT( FSM_Northing__c ) , &quot;,&quot;, &quot;&quot;)</formula>
    <label>Grid (Y)</label>
    <type>Text</type>
</CustomField>