force-app/main/default/objects/WorkOrder/fields/FSM_NoticeState__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoticeState__c</fullName>
    <description>sfi-1788</description>
    <label>Noticeable Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NNSE</fullName>
                <label>Notice Not Sent</label>
            </value>
            <value>
                <fullName>NTBS</fullName>
                <label>Notice To Be Sent</label>
            </value>
            <value>
                <fullName>NSIT</fullName>
                <label>Notice Sent Initial</label>
            </value>
            <value>
                <fullName>NSEN</fullName>
                <label>Notice Sent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>