force-app/main/default/objects/WorkOrder/fields/FSM_NoticeTypeScore__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoticeTypeScore__c</fullName>
    <formula>IF(ISPICKVAL(FSM_TMAPermit__r.FSM_NoticeType__c,&apos;01&apos;), 42, 
IF(ISPICKVAL(FSM_TMAPermit__r.FSM_NoticeType__c,&apos;05&apos;), 41,
IF(ISPICKVAL(FSM_TMAPermit__r.FSM_NoticeType__c,&apos;04&apos;), 41,
IF(ISPICKVAL(FSM_TMAPermit__r.FSM_NoticeType__c,&apos;03&apos;), 40,
IF(ISPICKVAL(FSM_TMAPermit__r.FSM_NoticeType__c,&apos;02&apos;), 40,0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notice Type Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>