force-app/main/default/objects/WorkOrder/fields/FSM_NotificationLongText__c.field-meta.xml
<CustomField>
    <fullName>FSM_NotificationLongText__c</fullName>
    <description>created as part of sfs-8045</description>
    <label>Notification Long Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>