force-app/main/default/objects/WorkOrder/fields/FSM_OpenDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_OpenDate__c</fullName>
    <label>Open Date</label>
    <type>DateTime</type>
</CustomField>