force-app/main/default/objects/WorkOrder/fields/FSM_OpenMesuringPointsCount__c.field-meta.xml
<CustomField>
    <fullName>FSM_OpenMesuringPointsCount__c</fullName>
    <description>Count of measuring points to be completed reading. 
SFS-4065</description>
    <label>Open Measuring Points</label>
    <summaryFilterItems>
        <field>FSM_WOMeasuringPoint__c.FSM_CompletionStatus__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>FSM_WOMeasuringPoint__c.FSM_WorkOrder__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>