force-app/main/default/objects/WorkOrder/fields/FSM_OperationNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_OperationNumber__c</fullName>
    <description>Placeholder field to support DCF build</description>
    <label>Operation Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>