force-app/main/default/objects/WorkOrder/fields/FSM_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_OrderNumber__c</fullName>
    <description>Created to support DCF build</description>
    <label>Order Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>