force-app/main/default/objects/WorkOrder/fields/FSM_PrecautionMessage__c.field-meta.xml
<CustomField>
    <fullName>FSM_PrecautionMessage__c</fullName>
    <label>Precautionary Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>