force-app/main/default/objects/WorkOrder/fields/FSM_PrerequsitesComplete__c.field-meta.xml
<CustomField>
    <fullName>FSM_PrerequsitesComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-requisites Complete</label>
    <type>Checkbox</type>
</CustomField>