force-app/main/default/objects/WorkOrder/fields/FSM_RestrictStatusUpdate__c.field-meta.xml
<CustomField>
    <fullName>FSM_RestrictStatusUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as a part of SFS-1298. This field is used for throwing Validation error when WO status is changed to Completed and the Mandatory Worksteps related to workorder are not completed. The value of this flow is set in Before trigger flow of WO.</description>
    <label>Restrict Status Update</label>
    <type>Checkbox</type>
</CustomField>