force-app/main/default/objects/WorkOrder/fields/FSM_SAPOrderOperationNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_SAPOrderOperationNumber__c</fullName>
    <formula>FSM_OrderNumber__c+&apos;-&apos;+FSM_OperationNumber__c</formula>
    <label>SAP Order-Operation Number</label>
    <type>Text</type>
</CustomField>