force-app/main/default/objects/WorkOrder/fields/FSM_ScheduledEnd__c.field-meta.xml
<CustomField>
    <fullName>FSM_ScheduledEnd__c</fullName>
    <description>SFI-2897</description>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>