force-app/main/default/objects/WorkOrder/fields/FSM_ScheduledStart__c.field-meta.xml
<CustomField>
    <fullName>FSM_ScheduledStart__c</fullName>
    <description>SFI-2897</description>
    <label>Scheduled Start</label>
    <type>DateTime</type>
</CustomField>