force-app/main/default/objects/WorkOrder/fields/FSM_SendAppointmentURL__c.field-meta.xml
<CustomField>
    <fullName>FSM_SendAppointmentURL__c</fullName>
    <description>Created as part of SFI-2961, This is to see if URL need to be send or not</description>
    <label>Send Appointment URL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>