force-app/main/default/objects/WorkOrder/fields/FSM_ServiceOrderType__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceOrderType__c</fullName>
    <description>Created as a part of SFS-292</description>
    <label>Service Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>