force-app/main/default/objects/WorkOrder/fields/FSM_ServiceSummary__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceSummary__c</fullName>
    <description>Created as a part of SFS-292</description>
    <label>Service Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>