force-app/main/default/objects/WorkOrder/fields/FSM_ServiceTerritoryExternalID__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceTerritoryExternalID__c</fullName>
    <description>SFI-638</description>
    <formula>ServiceTerritory.FSM_ExternalId__c</formula>
    <label>Service Territory External ID</label>
    <type>Text</type>
</CustomField>