force-app/main/default/objects/WorkOrder/fields/FSM_SiteName__c.field-meta.xml
<CustomField>
    <fullName>FSM_SiteName__c</fullName>
    <description>Created as part of SFS-7655</description>
    <label>Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>