force-app/main/default/objects/WorkOrder/fields/FSM_SLADueDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_SLADueDate__c</fullName>
    <description>Created as a part of SFS-3043</description>
    <label>SLA Due Date</label>
    <type>DateTime</type>
</CustomField>