force-app/main/default/objects/WorkOrder/fields/FSM_StandardTextKey__c.field-meta.xml
<CustomField>
    <fullName>FSM_StandardTextKey__c</fullName>
    <label>Standard Text Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>