force-app/main/default/objects/WorkOrder/fields/FSM_Suitability__c.field-meta.xml
<CustomField>
    <fullName>FSM_Suitability__c</fullName>
    <description>Created as a part of SFS-1298.(E = Excavation ,C = Covers ,R = Reinstatement ,D = Defect)
Updated as part of SFI-1616</description>
    <label>Suitability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <label>Excavation</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cover</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Reinstatement</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Defective Reinstatement Repair</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No notice required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>