force-app/main/default/objects/WorkOrder/fields/FSM_SuspendReason__c.field-meta.xml
<CustomField>
    <fullName>FSM_SuspendReason__c</fullName>
    <description>SFI-36
Updated as part of SFI-1737</description>
    <label>Suspend Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ITES</fullName>
                <label>End of shift</label>
            </value>
            <value>
                <fullName>PLER</fullName>
                <label>Emergency/Reactive Work</label>
            </value>
            <value>
                <fullName>ITUA</fullName>
                <label>Unplanned absence</label>
            </value>
            <value>
                <fullName>ITTD</fullName>
                <label>Travel delays</label>
            </value>
            <value>
                <fullName>AVND</fullName>
                <label>No DST available</label>
            </value>
            <value>
                <fullName>CUNH</fullName>
                <label>CUSTOMER Not at home</label>
            </value>
            <value>
                <fullName>PLRC</fullName>
                <label>Requested by Customer</label>
            </value>
            <value>
                <fullName>SINL</fullName>
                <label>No access-Customer/Land owner</label>
            </value>
            <value>
                <fullName>CUNR</fullName>
                <label>Customer site not ready</label>
            </value>
            <value>
                <fullName>OTHS</fullName>
                <label>Health and safety</label>
            </value>
            <value>
                <fullName>OTAW</fullName>
                <label>Adverse weather conditions</label>
            </value>
            <value>
                <fullName>OTFT</fullName>
                <label>Incorrect Skills</label>
            </value>
            <value>
                <fullName>PLOR</fullName>
                <label>Obstruction removal required</label>
            </value>
            <value>
                <fullName>OTAS</fullName>
                <label>Dangerous situation</label>
            </value>
            <value>
                <fullName>HSED</fullName>
                <label>Engineering Difficulties</label>
            </value>
            <value>
                <fullName>HSAR</fullName>
                <label>Additional resource</label>
            </value>
            <value>
                <fullName>VEIN</fullName>
                <label>Incorrect</label>
            </value>
            <value>
                <fullName>JBFN</fullName>
                <label>Part unavailable</label>
            </value>
            <value>
                <fullName>JBTE</fullName>
                <label>Not available</label>
            </value>
            <value>
                <fullName>OTMS</fullName>
                <label>System error</label>
            </value>
            <value>
                <fullName>VEBR</fullName>
                <label>Breakdown</label>
            </value>
            <value>
                <fullName>PLFW</fullName>
                <label>Further visit/work required</label>
            </value>
            <value>
                <fullName>PRNW</fullName>
                <label>No work required</label>
            </value>
            <value>
                <fullName>SINA</fullName>
                <label>No access/Parking</label>
            </value>
            <value>
                <fullName>JBTM</fullName>
                <label>Traffic Mgnt not available</label>
            </value>
            <value>
                <fullName>PRNB</fullName>
                <label>Traffic Mgnt not booked</label>
            </value>
            <value>
                <fullName>JBDO</fullName>
                <label>Duplicate operation</label>
            </value>
            <value>
                <fullName>SIDH</fullName>
                <label>Dry hole</label>
            </value>
            <value>
                <fullName>SIWC</fullName>
                <label>Work conflict</label>
            </value>
            <value>
                <fullName>PLPD</fullName>
                <label>Permission to dig required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>